2008-09-03  Lars-Peter Clausen  <lars@metafoo.de>

	* plugin-ins/pygimp/pygimp.h: define PyInt_AsSsize_t as PyInt_AsLong
	if the python version is smaller then 2.5.0.
	* configure.in: Lower required python version to 2.4.

2008-09-03  Michael Natterer  <mitch@gimp.org>

	* app/pdb/gimpprocedure.[ch] (gimp_procedure_set_static_strings):
	made the string parameters const.

2008-09-03  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcontrollerkeyboard.c (struct _KeyboardEvent)
	* app/widgets/gimpcontrollerwheel.c (struct _WheelEvent): made the
	blurbs const.

2008-09-03  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpnavigationview.c
	(gimp_navigation_view_motion_notify): remove the call to
	gdk_window_get_pointer() again.

	(gimp_navigation_view_grab_pointer): instead, grab the pointer
	properly with owner_events=FALSE so all events are reported with
	respect to the widget's window.

2008-09-03  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplayshell-callbacks.c
	* libgimpwidgets/gimpcolorselect.c
	* modules/color-selector-water.c
	* plug-ins/ifs-compose/ifs-compose.c: instead of using
	gdk_window_get_pointer() if GdkEventMotion::is_hint is TRUE,
	simply always use the coords from the event and call
	gdk_event_request_motions() to ask for more motion events. This is
	the recommended way and also works for events from devices other
	than the core pointer.

	* plug-ins/ifs-compose/ifs-compose.c (design_area_motion): some
	code cleanup while i was at it.

2008-09-03  Michael Natterer  <mitch@gimp.org>

	* libgimpwidgets/gimpbutton.c: massively simplified. Don't fiddle
	in GtkButton's internals (like setting "in_button" and forcing
	redraws). Instead, simply remember the modifier state in
	button_press() and check it in clicked(); if the state is != 0,
	stop the "clicked" emission and emit "extended-clicked" instead.

2008-09-03  Michael Schumacher  <schumaml@cvs.gnome.org>

	* configure.in: bumped minimum required Python version to 2.5.0,